; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarDateFromUI8.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarDateFromUI8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ULONG64 = common dso_local global i32 0, align 4
@VarDateFromUI8 = common dso_local global i32 0, align 4
@DATE_MAX = common dso_local global i32 0, align 4
@EXPECT_OVERFLOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarDateFromUI8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarDateFromUI8() #0 {
  %1 = load i32, i32* @ULONG64, align 4
  %2 = call i32 @CONVVARS(i32 %1)
  %3 = load i32, i32* @VarDateFromUI8, align 4
  %4 = call i32 @CONVERT(i32 %3, i32 0)
  %5 = call i32 @EXPECT(i32 0)
  %6 = load i32, i32* @VarDateFromUI8, align 4
  %7 = call i32 @CONVERT(i32 %6, i32 1)
  %8 = call i32 @EXPECT(i32 1)
  %9 = load i32, i32* @VarDateFromUI8, align 4
  %10 = load i32, i32* @DATE_MAX, align 4
  %11 = call i32 @CONVERT(i32 %9, i32 %10)
  %12 = load i32, i32* @DATE_MAX, align 4
  %13 = call i32 @EXPECT(i32 %12)
  %14 = load i32, i32* @VarDateFromUI8, align 4
  %15 = load i32, i32* @DATE_MAX, align 4
  %16 = add nsw i32 %15, 1
  %17 = call i32 @CONVERT(i32 %14, i32 %16)
  %18 = load i32, i32* @EXPECT_OVERFLOW, align 4
  ret void
}

declare dso_local i32 @CONVVARS(i32) #1

declare dso_local i32 @CONVERT(i32, i32) #1

declare dso_local i32 @EXPECT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
